2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>

	bug #37977 Support for Openmoko Debug Board
	* avrdude.conf.in: added openmoko entry

2013-01-29  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7932 Read USBtiny VID and PID from avrdude.conf if provided.
	* avrdude.conf.in: added usbpid, usbvid to usbtiny
	* usbtiny.[ch]: use usbpid, usbpid if provided in config file

2013-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38172: avrftdi: Incorrect information in avrdude.conf
	* avrdude.conf.in (avrftdi): fix comments about ACBUS vs. ADBUS;
	add a comment that the MPSSE signals are fixed by the FTDI
	hardware and cannot be changed

2013-01-09  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7165 Add support for bitbanging GPIO lines using the Linux sysf GPIO interface
	* doc/avrdude.texi,avrdude.1: added doc for linuxgpio 
	* avrdude.conf.in: added template for linuxgpio programmer
	* config_gram.y: pin numbers restricted to [PIN_MIN, PIN_MAX]
	* pindefs.h: added PIN_MIN, PIN_MAX, removed unused LED_ON/OFF
	* configure.ac: configure option enable-linuxgpio, print of enabled options
	* linuxgpio.[ch]: new source for linuxgpio programmer
	* Makefile.am: added linuxgpio to sources list
	* pgm_type.c: added linuxgpio to programmer types list

2013-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkI.c (jtagmkI_prmsg): replace a putchar() by putc(...stderr)
	* jtagmkII.c (jtagmkII_prmsg): (Dito.)
	* jtag3.c (jtag3_prevent, jtag3_prmsg): (Dito.)

2013-01-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c (usbdev_open): Downgrade the max transfer size for
	the main data endpoints when being forced so by the USB; this can
	happen when attaching the JTAGICE3 to a USB 1.1 connection
	* jtag3.c (jtag3_initialize): When detecting a downgraded max
	transfer size on the JTAGICE3 (presumably, due to being connected
	to USB 1.1 only), bail out as its firmware cannot properly handle
	this (by now)

2013-01-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
